# katex-rs

./: .gitignore  CLAUDE.md  Cargo.toml  deny.toml  flake.nix  package-lock.json  package.json
crates/katex/: Cargo.toml  build.rs
crates/katex-wasm/: Cargo.toml
crates/katex-wasm/src/: lib.rs
crates/katex/examples/: mathml_demo.rs
crates/katex/src/: build_mathml.rs  define_environment.rs  define_function.rs  define_macro.rs  font_metrics_data.rs  katex.rs  lexer.rs  lib.rs  macro_expander.rs  macros.rs  mathml_tree.rs  namespace.rs  options.rs  parse_error.rs  parse_node.rs  parser.rs  settings.rs  source_location.rs  spacing_data.rs  style.rs  symbols.rs  token.rs  tree.rs  types.rs  unicode_accents.rs  unicode_scripts.rs  unicode_sup_or_sub.rs  unicode_symbols.rs  units.rs
crates/katex/src/environments/: array.rs  cd.rs  mod.rs
crates/katex/src/functions/: accent.rs  accentunder.rs  arrow.rs  char.rs  color.rs  cr.rs  delimsizing.rs  enclose.rs  environment.rs  font.rs  genfrac.rs  horizbrace.rs  href.rs  html_mathml.rs  includegraphics.rs  kern.rs  lap.rs  math.rs  mathchoice.rs  mclass.rs  mod.rs  op.rs  operatorname.rs  ordgroup.rs  overline.rs  phantom.rs  raisebox.rs  rule.rs  sizing.rs  smash.rs  sqrt.rs  styling.rs  supsub.rs  symbols_op.rs  symbols_ord.rs  tag.rs  text.rs  underline.rs  utils.rs  verb.rs
crates/katex/tests/: mathml_snapshots.rs
crates/katex/tests/snapshots/: known_mismatches.txt
crates/katex/tests/snapshots/expected/: 00_digit.mml  01_digit_zero.mml  02_two_digit.mml  03_decimal.mml  abs.mml  acute.mml  add.mml  alpha.mml  approx.mml  bar.mml  beta_gamma.mml  binom.mml  (+108 more)
(+92 files in other folders)
