[package]
name = "katex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
