[package]
name = "katex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[features]
default = []
serde = ["dep:serde"]
# Compile in the full font-metrics table. Off by default (MathML output
# only needs a tiny slice); turned on for the eventual HTML+CSS renderer.
html = []

[dependencies]
phf = "0.11"
regex = "1"
smol_str = "0.3"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }

[build-dependencies]
phf_codegen = "0.11"
serde_json = "1"

[dev-dependencies]
serde_json = "1"
